<resources>
    <string name="app_name">Parts Runner</string>
    <string name="equipment_types">Edit Equipment/Item Types</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">OH NO Mr. Bill I\'m a lazy Lima Bean who has not entered anything in the Machines\' sheets.</string>
    <!-- Subtitle text for the empty view that prompts the user to add a machine/item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Please get started adding some vehicles/machines/items by clicking on the button below.</string>

    <string name="activity_add_edit_item_title_add_machine">Add Item</string>
    <string name="activity_add_edit_item_title_edit_machine">Edit Item</string>

    <!-- activity_add_edit_item.xml -->
    <string name="machine_type">Item Type:"</string>
    <string name="year">Year</string>
    <string name="manufacturer">Manufacturer/Item:</string>
    <string name="model">Model:</string>
    <string name="model_num">Model No:</string>
    <string name="serial_num">Serial No:</string>
    <string name="item_num">Item No:</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete this item</string>
    <string name="insert_machine_failed">Failed to save machine/item</string>
    <string name="insert_machine_good">Machine/item successfully saved</string>
    <string name="edit_update_machine_failed">Failed to update machine/item</string>
    <string name="edit_update_machine_success">Update machine/item succeeded</string>
    <string name="delete_machine_failure">Failed to delete machine/item</string>
    <string name="delete_machine_successful">Delete machine/item succeeded</string>
    <string name="delete_dialog_msg">Delete this record</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing</string>
    <string name="discard">Discard edit</string>
    <string name="keep_editing">Keep editing</string>
    <string name="not_needed_cars">Usually not needed for vehicles</string>
    <string name="which_one">Which number if more than one</string>
    <string name="notes">Put notes here</string>

    <!-- activity_equipment_type.xml -->
    <string name="empty_view_equipment_type_text">If there are no Equipment Types listed
    please add some by clicking on the Floating Action Button (Plus Sign) below.</string>

    <!-- EditEquipTypeActivity.java -->
    <string name="missing_equip_type">Value is required to save a new Equipment Type</string>
    <string name="parts_runner_provider_insert_record_failed">Record save failed</string>
    <string name="parts_runner_provider_insert_record_succeeded">Record save succeeded</string>
    <string name="edit_update_record_failed">Record update failed</string>
    <string name="edit_update_record_success">Record update succeeded</string>
    <string name="delete_record_failure">Record not deleted (Error)</string>
    <string name="delete_record_successful">Record deleted</string>
    <string name="share">Share</string>
    <string name="unable_to_cascade_delete">Unable to Cascade Delete</string>

    <!-- Added 1.15.01.1_backup -->
    <string name="action_backup_database">Backup Database</string>

</resources>
